Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8205509

assert(_name_and_id != 0LL) failed: encountered a class loader null name and id

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2 P2
    • 11
    • 11
    • hotspot
    • b20

        Crash while running test/jdk/java/lang/instrument/DaemonThread/TestDaemonThread.java:


        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=src/hotspot/share/classfile/classLoaderData.cpp:955
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (src/hotspot/share/classfile/classLoaderData.cpp:955), pid=26380, tid=25820
        # assert(_name_and_id != 0LL) failed: encountered a class loader null name and id
        #
        # JRE version: Java(TM) SE Runtime Environment (11.0) (fastdebug build 11-internal+0-jdk11-jdk.893)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 11-internal+0-jdk11-jdk.893, mixed mode, tiered, compressed oops, g1 gc, windows-amd64)
        # Core dump will be written. Default location: JTwork\\scratch\\hs_err_pid26380.mdmp
        #
        # An error report file with more information is saved as:
        # JTwork\\scratch\\hs_err_pid26380.log
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.java.com/bugreport/crash.jsp
        #

              lfoltan Lois Foltan
              mikael Mikael Vidstedt
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: