8205509: assert(_name_and_id != 0LL) failed: encountered a class loader null name and id

The method loader_name_and_id should return the external name of the class loader if _name_and_id is null.

Reviewed-by: coleenp, stuefe