src/hotspot/share/classfile/classLoaderData.hpp
@@ -305,7 +305,7 @@ class ClassLoaderData : public CHeapObj<mtClass> {
 
   Dictionary* create_dictionary();
 
-  void initialize_name_and_klass(Handle class_loader);
+  void initialize_name(Handle class_loader);
  public:
   // GC interface.
   void clear_claimed() { _claimed = 0; }
